--- a/Real_MySQL_1/김정민/운영체제/프로세스스레드.md
+++ b/Real_MySQL_1/김정민/운영체제/프로세스스레드.md
@@ -23,7 +23,7 @@
 - 프로세스마다 각각 독립된 메모리 영역을 Code/Data/Stack/Heap 형식으로 할당해줌
 - 서로 다른 프로세스끼리는 통신을 위해서 IPC가 필요하다.
 ![img.png](이미지/프로세스_운영체제.png)
-- 이와 다르게 스레드는 프로세스가 할당 받은 메모리 영역내에서 Stack 영역은 따로 할당 받고 나머지 Code/Data/Heap 형식으로 할당된 메모리 영역을 공유한다.
+- 이와 다르게 스레드는 프로세스가 할당 받은 메모리 영역내에서 Stack 영역은 따로 할당 받고 나머지 Code/Data/Heap 형식으로 할당된 메모리 영역을 공유한다.<br>
 ![img.png](이미지/스레드_프로세스.png)
 - 프로세스는 강제 종료되더라도 다른 프로세스에 별도의 영향이 없음
 - 스레드의 경우에는 메모리 영역을 공유하기 때문에 스레드의 오류가 모든 스레드로 전파되서 종료됨
